[package]
name = "wasm_towertech"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.16.1"
rand = { version = "0.8", default-features = false, features = ["std", "small_rng"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.100"

[lib]
crate-type = ["cdylib"]

[profile.dev.package."*"]
opt-level = 3
